[CF]-Azure-Event-Hub-Doc-Update (#5250)
# Description
This PR is an update to the Azure Event Hub documentation.


# How Has This Been Tested?
The document is appearing as expected in the mintlify dev env.

- [ ] Test A
- [ ] Test B


# Checklist
- [X] The PR is tagged with proper labels (bug, enhancement, feature,
documentation)
- [X] I have performed a self-review of my own code
- [ ] I have added unit tests that prove my fix is effective or that my
feature works
- [ ] I have commented my code, particularly in hard-to-understand areas
- [X] I have made corresponding changes to the documentation

cc:
@johnson-mage 
<img width="1207" alt="Screenshot 2024-07-08 at 10 58 33 AM"
src="https://github.com/mage-ai/mage-ai/assets/92221031/3ba67f47-d9db-4d23-b85c-cbd9c9bed90c">
<img width="1207" alt="Screenshot 2024-07-08 at 10 58 47 AM"
src="https://github.com/mage-ai/mage-ai/assets/92221031/6091c77a-4f58-49fd-ba8c-a850530f8216">
<img width="1245" alt="Screenshot 2024-07-08 at 10 59 02 AM"
src="https://github.com/mage-ai/mage-ai/assets/92221031/f4ad0f09-c007-4c67-8c92-eecc0a758c70">
<img width="1283" alt="Screenshot 2024-07-08 at 10 59 09 AM"
src="https://github.com/mage-ai/mage-ai/assets/92221031/1d1d79c2-ff7c-46db-ba15-940371dec890">

---------

Co-authored-by: Cole Freeman <cole@mage.ai>

--- a/docs/streaming/sources/azure-event-hub.mdx
+++ b/docs/streaming/sources/azure-event-hub.mdx
@@ -1,12 +1,91 @@
 ---
 title: "Azure Event Hub"
+description: "This guide provides step-by-step instructions to set up and use Azure Event Hub with Mage. By following these instructions, 
+you can create a new streaming pipeline in Mage, authenticate with Azure Event Hub, and configure your data loader, transformer, 
+and exporter blocks to process and manage your data efficiently."
 ---
 
-## Config
+**Start Mage**
 
-```yaml
+1. Open Mage in your browser and then navigate to the pipelines page.
+2. Create a new pipeline by clicking the “+ New” button and then select “Streaming.”
+3. Enter a name for the pipeline and click “Create.”
+
+**Authentication**
+To authenticate with Azure Event Hub, complete the following actions:
+
+1. Configure your io_config.yml file with the account variables below. If you need further information about how to store secrets in 
+Mage check out the [documentation](https://docs.mage.ai/production/deploying-to-cloud/secrets/Azure).
+
+```YAML
+  AZURE_CLIENT_ID: "{{ env_var('AZURE_CLIENT_ID') }}"
+  AZURE_CLIENT_SECRET: "{{ env_var('AZURE_CLIENT_SECRET') }}"
+  AZURE_STORAGE_ACCOUNT_NAME: "{{ env_var('AZURE_STORAGE_ACCOUNT_NAME') }}"
+  AZURE_TENANT_ID: "{{ env_var('AZURE_TENANT_ID') }}"
+```
+2. Add a data loader block to your pipeline and then select "Azure Event Hub" as the source.
+3. Complete the data loader block with the information below.
+
+```YAML
 connector_type: azure_event_hub
 connection_str: 'Endpoint=sb://[namespace].servicebus.windows.net/;...'
 eventhub_name: event_hub_name
 consumer_group: '$Default'
 ```
+
+<Note>
+Connection string: Use the `connection_str` parameter in the config as shown above. You can obtain this from your Azure portal.
+</Note>
+
+4. Add the template transformer block or create a custom block to transform data from Azure Event Hub
+    - The template will populate with the code below. Make adjustments to your specific requirements.
+
+```Python
+from typing import Dict, List
+
+if 'transformer' not in globals():
+    from mage_ai.data_preparation.decorators import transformer
+
+@transformer
+def transform(messages: List[Dict], *args, **kwargs):
+    """
+    Template code for a transformer block.
+
+    Args:
+        messages: List of messages from the Event Hub.
+
+    Returns:
+        Transformed messages
+    """
+# Specify your transformation logic here
+    print(f'Transformed messages: {messages}')
+    return messages
+```
+5. Add a data exporter block and select “Dummy”
+6. Use the default setting as seen below.
+
+```YAML
+connector_type: dummy
+print_msg: true
+```
+
+**Additional Configuration Options**
+
+These additional configuration options are specifically for the data loader block that uses the Azure Event Hub connector. They should be added to the YAML configuration of your data loader block.
+
+1. prefetch: This determines the maximum number of events to retrieve in a single batch when reading from Event Hub.
+2. max_wait_time: This sets the maximum time to wait for a batch to be filled before returning.
+3. starting_position: This optional parameter specifies where to start reading events from in the Event Hub.
+    - Common starting positions include:
+        - -1 or @latest: Start from the end of the stream
+        - -2 or @earliest: Start from the end of the stream
+
+```YAML
+prefetch: <batch size> # optional, usually between 100 - 1000
+max_wait_time: <Wait time> # optional
+starting_position: <starting position> #optional, example '@latest'
+```
+
+By following this guide, you can successfully set up a streaming pipeline in Mage using Azure Event Hub. This allows you to authenticate, 
+load, transform, and export data efficiently. With these steps, you can leverage Mage and Azure Event Hub to create powerful and scalable 
+streaming data pipelines. 
